wakaru-rs/tests/snapshots/webpack4_unpack_raw__raw_module-31.snap
---
source: tests/webpack4_unpack_raw.rs
expression: code
---
"use strict";
function r(e) {
    var t, n = e.Symbol;
    return "function" == typeof n ? n.observable ? t = n.observable : (t = n("observable"), n.observable = t) : t = "@@observable", t;
}
exports.a = r;
