wakaru-rs/tests/snapshots/webpack4_unpack_raw__raw_module-4.snap
---
source: tests/webpack4_unpack_raw.rs
expression: code
---
"use strict";
var r = function() {};
module.exports = r;
